--- a/index.html
+++ b/index.html
@@ -9,73 +9,213 @@
 </head>
 
 <body>
- <header class="hero">
-  <div class="container">
-    <p class="badge">Raum Liezen & Umgebung</p>
-
-    <h1>Wohnungsräumung & Entrümpelung</h1>
-
-    <p class="lead">
-      Wir bieten zuverlässige Hilfe bei Wohnungsräumungen, Entrümpelungen und kleinen Transporten.
-      Besonders auch nach Todesfällen – diskret, respektvoll und unkompliziert.
-    </p>
-
-    <div class="cta">
-      <a class="btn primary" href="tel:+43XXXXXXXXX">Jetzt anrufen</a>
-      <a class="btn" href="https://wa.me/43XXXXXXXXX" target="_blank">WhatsApp</a>
-    </div>
-
-    <p class="note">
-      Keine Tatortreinigung · Keine laufende Wohnungsreinigung
-    </p>
-  </div>
-</header>
-
-<main>
-  <section class="section">
+  <header class="hero" id="top">
     <div class="container">
-      <h2>Unsere Leistungen</h2>
+      <p class="badge">Raum Liezen & Umgebung</p>
+      <h1>Wohnungsräumung & Transport</h1>
+      <p class="lead">
+        Zuverlässig, diskret und unkompliziert. Fixpreis nach kurzer Besichtigung oder Fotos.
+      </p>
 
-      <div class="grid">
-        <div class="card">
-          <h3>Wohnungsräumung & Entrümpelung</h3>
-          <ul>
-            <li>Wohnungen, Häuser, Keller, Dachböden, Garagen</li>
-            <li>Räumung nach Todesfall oder Wohnungsauflösung</li>
-            <li>Tragen, Sortieren und Abtransport</li>
-            <li>Besenrein übergeben (keine Reinigung)</li>
-          </ul>
-        </div>
+      <div class="cta">
+        <a class="btn primary" href="tel:+4368184885515">Jetzt anrufen</a>
+        <a class="btn" href="https://wa.me/436607348134" target="_blank" rel="noopener">WhatsApp</a>
+        <a class="btn" href="#anfrage">Anfrage senden</a>
+      </div>
 
-        <div class="card">
-          <h3>Kleintransporte & Möbeltransport</h3>
-          <ul>
-            <li>Möbel & Sperrmüll</li>
-            <li>Einzelstücke oder mehrere Möbel</li>
-            <li>Kurzfristige Termine möglich</li>
-          </ul>
-        </div>
+      <p class="note">
+        Keine Tatortreinigung · Keine biologische Sonderreinigung · Keine laufende Wohnungsreinigung
+      </p>
+    </div>
+  </header>
 
-        <div class="card">
-          <h3>Kleine Umzüge</h3>
-          <ul>
-            <li>1–2 Zimmer Wohnungen</li>
-            <li>Privatpersonen</li>
-            <li>Abends oder am Wochenende nach Absprache</li>
-          </ul>
-        </div>
+  <main>
+    <section class="section" id="leistungen">
+      <div class="container">
+        <h2>Leistungen</h2>
 
-        <div class="card">
-          <h3>Möbellieferung / Baumarkt</h3>
-          <ul>
-            <li>Abholung von OBI, Bauhaus, Möbelhäusern</li>
-            <li>Transport und Tragen bis in die Wohnung</li>
-          </ul>
+        <div class="grid">
+          <div class="card">
+            <h3>Entrümpelung / Wohnungsräumung</h3>
+            <ul>
+              <li>Wohnungen, Keller, Dachböden, Garagen</li>
+              <li>Räumung nach Wohnungsauflösung oder Todesfall</li>
+              <li>Sortieren, Tragen, Abtransport</li>
+              <li>Besenrein (keine Reinigung)</li>
+            </ul>
+          </div>
+
+          <div class="card">
+            <h3>Transport & Kleintransporte</h3>
+            <ul>
+              <li>Möbel & Sperrmüll</li>
+              <li>Einzelstücke oder mehrere Möbel</li>
+              <li>Kurzfristige Termine möglich</li>
+            </ul>
+          </div>
+
+          <div class="card">
+            <h3>Kleine Umzüge (1–2 Zimmer)</h3>
+            <ul>
+              <li>Privatpersonen</li>
+              <li>Tragen & Ausladen inklusive</li>
+              <li>Abends & am Wochenende nach Absprache</li>
+            </ul>
+          </div>
+
+          <div class="card">
+            <h3>Lieferung OBI / Bauhaus / Möbel</h3>
+            <ul>
+              <li>Abholung & Transport</li>
+              <li>Tragen bis in die Wohnung</li>
+              <li>Auch kurzfristig möglich</li>
+            </ul>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
-</main>
+    </section>
 
+    <section class="section alt" id="ablauf">
+      <div class="container">
+        <h2>Ablauf</h2>
+        <div class="steps">
+          <div class="step">
+            <span class="num">1</span>
+            <p><strong>Anfrage:</strong> kurz anrufen oder Fotos per WhatsApp senden.</p>
+          </div>
+          <div class="step">
+            <span class="num">2</span>
+            <p><strong>Fixpreis:</strong> nach kurzer Besichtigung oder Fotos.</p>
+          </div>
+          <div class="step">
+            <span class="num">3</span>
+            <p><strong>Durchführung:</strong> wir räumen, tragen und transportieren – besenrein.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section" id="preise">
+      <div class="container">
+        <h2>Richtpreise</h2>
+        <p class="muted">Endpreis nach Aufwand und Menge. Entsorgung je nach Menge – kann im Fixpreis enthalten sein.</p>
+
+        <div class="grid prices">
+          <div class="card">
+            <h3>Entrümpelung</h3>
+            <ul>
+              <li>Keller / kleiner Raum: <strong>ab 100 €</strong></li>
+              <li>Wohnung 1 Zimmer: <strong>ab 300 €</strong></li>
+              <li>Wohnung 2 Zimmer: <strong>ab 450 €</strong></li>
+              <li>Wohnung 3 Zimmer: <strong>ab 650 €</strong></li>
+            </ul>
+          </div>
+
+          <div class="card">
+            <h3>Transport / Umzugshilfe</h3>
+            <ul>
+              <li>Fahrzeug + 2 Personen: <strong>ab 40 € / Stunde</strong></li>
+              <li>Mindestdauer: <strong>1 Stunde</strong></li>
+              <li>Weitere Strecke: nach Absprache</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section alt" id="anfrage">
+      <div class="container">
+        <h2>Kontakt / Anfrage</h2>
+
+        <div class="contact">
+          <div class="card">
+            <h3>Schnellkontakt</h3>
+            <p>
+              Telefon: <a href="tel:+436607348134">+4368184885515</a><br />
+              E-Mail: <a href="mailto:jozefkoskocny@gmail.com">ladislavhlavacka11@gmail.com</a><br />
+              WhatsApp: <a href="https://wa.me/436607348134" target="_blank" rel="noopener">Chat öffnen</a>
+            </p>
+            <p class="muted">Wir melden uns so schnell wie möglich zurück.</p>
+          </div>
+
+          <div class="card">
+            <h3>Formular</h3>
+            <!-- FORMULAR: ZATIAĽ FUNGUJE AKO MAILTO (jednoduché). Neskôr prepíšeme na Formspree/Netlify Forms. -->
+            <form action="mailto:deinemail@example.com" method="post" enctype="text/plain">
+              <label>
+                Name
+                <input name="Name" required />
+              </label>
+              <label>
+                Telefon
+                <input name="Telefon" />
+              </label>
+              <label>
+                Adresse / Ort
+                <input name="Ort" />
+              </label>
+              <label>
+                Was soll gemacht werden?
+                <textarea name="Nachricht" rows="5" required></textarea>
+              </label>
+              <button class="btn primary" type="submit">Anfrage senden</button>
+              <p class="muted small">
+                Tipp: Für einen schnellen Fixpreis bitte Fotos per WhatsApp senden.
+              </p>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section" id="impressum">
+      <div class="container">
+        <h2>Impressum</h2>
+        <div class="card legal">
+          <p><strong>Betreiber:</strong> Vorname Nachname (bitte ergänzen)</p>
+          <p><strong>Adresse:</strong> Straße, PLZ Ort, Österreich (bitte ergänzen)</p>
+          <p><strong>Telefon:</strong> +43 XXXXXXX (bitte ergänzen)</p>
+          <p><strong>E-Mail:</strong> deinemail@example.com (bitte ergänzen)</p>
+          <p class="muted small">
+            Hinweis: Angaben (Gewerbe/UID) nach Gewerbeanmeldung ergänzen.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="section alt" id="datenschutz">
+      <div class="container">
+        <h2>Datenschutzerklärung (Kurz)</h2>
+        <div class="card legal">
+          <p>
+            Wir verarbeiten personenbezogene Daten (z.B. Name, Telefon, E-Mail), nur um Ihre Anfrage zu beantworten und die Leistung zu erbringen.
+            Eine Weitergabe an Dritte erfolgt nicht, außer wenn dies zur Durchführung notwendig ist (z.B. Entsorgung/Transportdienstleister).
+          </p>
+          <p>
+            Wenn Sie das Kontaktformular nutzen, werden die eingegebenen Daten per E-Mail an uns übermittelt.
+            Sie können jederzeit Auskunft, Berichtigung oder Löschung Ihrer Daten verlangen.
+          </p>
+          <p class="muted small">
+            Diese Kurzfassung ist ein Start. Für eine vollständige Datenschutzerklärung ergänzen wir Details (Hosting, Cookies, Formulardienst), sobald ihr final geht.
+          </p>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div class="container">
+      <p>© <span id="year"></span> Wohnungsräumung & Transport – Raum Liezen</p>
+      <p class="links">
+        <a href="#top">Nach oben</a>
+        <a href="#impressum">Impressum</a>
+        <a href="#datenschutz">Datenschutz</a>
+      </p>
+    </div>
+  </footer>
+
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
