--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </p>
 
       <div class="cta">
-        <a class="btn primary" href="tel:+4368184885515">Jetzt anrufen</a>
+        <a class="btn primary" href="tel:+436607348134">Jetzt anrufen</a>
         <a class="btn" href="https://wa.me/436607348134" target="_blank" rel="noopener">WhatsApp</a>
         <a class="btn" href="#anfrage">Anfrage senden</a>
       </div>
@@ -131,7 +131,7 @@
           <div class="card">
             <h3>Schnellkontakt</h3>
             <p>
-              Telefon: <a href="tel:+436607348134">+4368184885515</a><br />
+              Telefon: <a href="tel:+436607348134">+436607348134</a><br />
               E-Mail: <a href="mailto:jozefkoskocny@gmail.com">ladislavhlavacka11@gmail.com</a><br />
               WhatsApp: <a href="https://wa.me/436607348134" target="_blank" rel="noopener">Chat öffnen</a>
             </p>
@@ -172,10 +172,10 @@
       <div class="container">
         <h2>Impressum</h2>
         <div class="card legal">
-          <p><strong>Betreiber:</strong> Vorname Nachname (bitte ergänzen)</p>
-          <p><strong>Adresse:</strong> Straße, PLZ Ort, Österreich (bitte ergänzen)</p>
-          <p><strong>Telefon:</strong> +43 XXXXXXX (bitte ergänzen)</p>
-          <p><strong>E-Mail:</strong> deinemail@example.com (bitte ergänzen)</p>
+          <p><strong>Betreiber:</strong> Jozef Skocny)</p>
+          <p><strong>Adresse:</strong> Pyhrnstrasse 1, 8940 Liezen, Österreich </p>
+          <p><strong>Telefon:</strong> +4368184885515 </p>
+          <p><strong>E-Mail:</strong> jozefkoskocny@gmail.com </p>
           <p class="muted small">
             Hinweis: Angaben (Gewerbe/UID) nach Gewerbeanmeldung ergänzen.
           </p>
