--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
       <div class="container">
         <h2>Impressum</h2>
         <div class="card legal">
-          <p><strong>Betreiber:</strong> Jozef Skocny)</p>
+          <p><strong>Betreiber:</strong> Jozef Skocny</p>
           <p><strong>Adresse:</strong> Pyhrnstrasse 1, 8940 Liezen, Österreich </p>
           <p><strong>Telefon:</strong> +4368184885515 </p>
           <p><strong>E-Mail:</strong> jozefkoskocny@gmail.com </p>
