--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <h3>Schnellkontakt</h3>
             <p>
               Telefon: <a href="tel:+436607348134">+436607348134</a><br />
-              E-Mail: <a href="mailto:jozefkoskocny@gmail.com">ladislavhlavacka11@gmail.com</a><br />
+              E-Mail: <a href="mailto:ladislavhlavacka11@gmail.com">ladislavhlavacka11@gmail.com</a><br />
               WhatsApp: <a href="https://wa.me/436607348134" target="_blank" rel="noopener">Chat öffnen</a>
             </p>
             <p class="muted">Wir melden uns so schnell wie möglich zurück.</p>
@@ -141,7 +141,7 @@
           <div class="card">
             <h3>Formular</h3>
             <!-- FORMULAR: ZATIAĽ FUNGUJE AKO MAILTO (jednoduché). Neskôr prepíšeme na Formspree/Netlify Forms. -->
-            <form action="mailto:deinemail@example.com" method="post" enctype="text/plain">
+            <form action="ladislavhlavacka11@gmail.com" method="post" enctype="text/plain">
               <label>
                 Name
                 <input name="Name" required />
