--- a/index.html
+++ b/index.html
@@ -9,13 +9,29 @@
 </head>
 
 <body>
+  <nav class="nav">
+  <div class="container nav-inner">
+    <a class="brand" href="#top">Wohnungsräumung Liezen</a>
+    <div class="nav-links">
+      <a href="#leistungen">Leistungen</a>
+      <a href="#preise">Preise</a>
+      <a href="#anfrage" class="nav-cta">Kontakt</a>
+    </div>
+  </div>
+</nav>
+
   <header class="hero" id="top">
     <div class="container">
       <p class="badge">Raum Liezen & Umgebung</p>
-      <h1>Wohnungsräumung & Transport</h1>
+      <h1>Wohnungsräumung & Transport im Raum Liezen</h1>
       <p class="lead">
         Zuverlässig, diskret und unkompliziert. Fixpreis nach kurzer Besichtigung oder Fotos.
       </p>
+<div class="trust">
+  <div class="trust-item"><strong>Fixpreis</strong><span>nach Fotos oder kurzer Besichtigung</span></div>
+  <div class="trust-item"><strong>Diskret</strong><span>auch nach Todesfall / Nachlass</span></div>
+  <div class="trust-item"><strong>Schnell</strong><span>kurzfristige Termine möglich</span></div>
+</div>
 
       <div class="cta">
         <a class="btn primary" href="tel:+436607348134">Jetzt anrufen</a>
@@ -94,6 +110,61 @@
         </div>
       </div>
     </section>
+<section class="section" id="inklusive">
+  <div class="container">
+    <h2>Was ist im Preis enthalten?</h2>
+    <p class="muted">Transparent und fair – wir sagen Ihnen vorher, was es kostet.</p>
+
+    <div class="grid">
+      <div class="card">
+        <h3>Inklusive</h3>
+        <ul>
+          <li>Tragen, Sortieren und Abtransport</li>
+          <li>Besenrein übergeben</li>
+          <li>Fixpreis nach Fotos oder kurzer Besichtigung</li>
+          <li>Diskrete Abwicklung (auch nach Todesfall)</li>
+        </ul>
+      </div>
+
+      <div class="card">
+        <h3>Nicht inklusive</h3>
+        <ul>
+          <li>Keine Tatortreinigung / Sonderreinigung</li>
+          <li>Keine laufende Wohnungsreinigung</li>
+          <li>Entsorgungskosten je nach Menge (wird klar kommuniziert)</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="section alt" id="faq">
+  <div class="container">
+    <h2>Häufige Fragen</h2>
+
+    <div class="grid">
+      <div class="card">
+        <h3>Wie schnell geht ein Termin?</h3>
+        <p>Oft kurzfristig möglich. Am schnellsten geht es mit Fotos per WhatsApp.</p>
+      </div>
+
+      <div class="card">
+        <h3>Wie berechnen wir den Preis?</h3>
+        <p>Nach Menge und Aufwand. Sie bekommen einen Fixpreis nach Fotos oder kurzer Besichtigung.</p>
+      </div>
+
+      <div class="card">
+        <h3>Was passiert mit Möbeln und Sachen?</h3>
+        <p>Nach Absprache: Mitnahme, Entsorgung oder Abgabe. Wir arbeiten transparent.</p>
+      </div>
+
+      <div class="card">
+        <h3>Räumung nach Todesfall?</h3>
+        <p>Ja – diskret und respektvoll. Keine Tatort- oder Sonderreinigung.</p>
+      </div>
+    </div>
+  </div>
+</section>
 
     <section class="section" id="preise">
       <div class="container">
@@ -141,7 +212,7 @@
           <div class="card">
             <h3>Formular</h3>
             <!-- FORMULAR: ZATIAĽ FUNGUJE AKO MAILTO (jednoduché). Neskôr prepíšeme na Formspree/Netlify Forms. -->
-            <form action="ladislavhlavacka11@gmail.com" method="post" enctype="text/plain">
+            <form action="mailto:ladislavhlavacka11@gmail.com?subject=Anfrage%20Wohnungsraeumung%20Liezen" method="post" enctype="text/plain">
               <label>
                 Name
                 <input name="Name" required />
