--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Wohnungsräumung & Transport – Raum Liezen</title>
   <meta name="description" content="Entrümpelung, Wohnungsräumung, Kleintransporte und Umzugshilfe im Raum Liezen. Fixpreis nach Absprache. Schnell & diskret." />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css?v=4" />
 </head>
 
 <body>
